More styling improvements

--- a/uk-prime-ministers.html
+++ b/uk-prime-ministers.html
@@ -13,12 +13,18 @@
     <table class="timeline-table" title="UK Prime Ministers">
         <style>
             table {
-                --colour-category-1: hsl(123, 70%, 57%);   /* Whig */
-                --colour-category-2: hsl(194, 60%, 60%);   /* Tory */
-                --colour-category-3: hsl(221, 80%, 70%);   /* Conservative */
-                --colour-category-4: hsl(300, 63%, 46%);   /* Peelite */
-                --colour-category-5: hsl(60, 90%, 70%);    /* Liberal */
-                --colour-category-6: hsl(0, 85%, 47%);     /* Labour */
+                --colour-category-1: hsl(123, 70%, 57%);
+                /* Whig */
+                --colour-category-2: hsl(194, 60%, 60%);
+                /* Tory */
+                --colour-category-3: hsl(221, 80%, 70%);
+                /* Conservative */
+                --colour-category-4: hsl(300, 63%, 46%);
+                /* Peelite */
+                --colour-category-5: hsl(60, 90%, 70%);
+                /* Liberal */
+                --colour-category-6: hsl(0, 85%, 47%);
+                /* Labour */
             }
         </style>
         <tr>
