Added new sample timeline for generations and also improved handing of categories when no categories available and also appearance when events selected.

--- a/uk-prime-ministers.html
+++ b/uk-prime-ministers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>UK Prime Ministers</title>
 </head>
 
 <body>
@@ -13,18 +13,18 @@
     <table class="timeline-table" title="UK Prime Ministers">
         <style>
             table {
-                --colour-category-1: hsl(123, 70%, 57%);
                 /* Whig */
-                --colour-category-2: hsl(194, 60%, 60%);
+                --colour-category-1: hsl(123, 70%, 57%);
                 /* Tory */
-                --colour-category-3: hsl(221, 80%, 70%);
+                --colour-category-2: hsl(194, 60%, 60%);
                 /* Conservative */
-                --colour-category-4: hsl(300, 63%, 46%);
+                --colour-category-3: hsl(221, 80%, 70%);
                 /* Peelite */
-                --colour-category-5: hsl(60, 90%, 70%);
+                --colour-category-4: hsl(300, 63%, 46%);
                 /* Liberal */
-                --colour-category-6: hsl(0, 85%, 47%);
+                --colour-category-5: hsl(60, 90%, 70%);
                 /* Labour */
+                --colour-category-6: hsl(0, 85%, 47%);
             }
         </style>
         <tr>
