--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Table Timeline</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Table Timeline</title>
 </head>
 <style>
   body {
-    display:flex;
+    display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
   }
+
   .container {
     max-width: 400px;
   }
+
   h1 {
     text-align: center;
     text-transform: uppercase;
   }
 </style>
+
 <body>
 
   <div class="container">
 
-  <h1>Table Timeline</h1>
+    <h1>Table Timeline</h1>
 
-  <p>Table Timeline is a javascript module and associated css file which converts HTML event tables to graphical timeline charts. The following example html files demonstrate how this library works.</p>
-  <ul>
-    <li><a href="uk-prime-ministers.html">uk-prime-ministers</a></li>
-    <li><a href="geologic-timescale.html">geologic-timescale.html</a></li>
-  </ul>
+    <p>Table Timeline is a javascript module and associated css file which converts HTML event tables to graphical
+      timeline charts. The following example html files demonstrate how this library works.</p>
+    <ul>
+      <li><a href="uk-prime-ministers.html">uk-prime-ministers</a></li>
+      <li><a href="geologic-timescale.html">geologic-timescale.html</a></li>
+      <li><a href="generations.html">generations.html</a></li>
+    </ul>
 
-  <script src="table-timeline.js"></script>
+    <script src="table-timeline.js"></script>
 
-</div>
-    
+  </div>
+
 </body>
+
 </html>
