Started to handle new format for timeline data

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <li><a href="uk-prime-ministers.html">uk-prime-ministers</a></li>
       <li><a href="geologic-timescale.html">geologic-timescale.html</a></li>
       <li><a href="generations.html">generations.html</a></li>
+      <li><a href="test.html">test.html</a></li>
     </ul>
 
     <script src="table-timeline.js"></script>
