--- a/index.html
+++ b/index.html
@@ -1,48 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Table Timeline</title>
-</head>
-<style>
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .container {
-    max-width: 400px;
-  }
-
-  h1 {
-    text-align: center;
-    text-transform: uppercase;
-  }
-</style>
-
-<body>
-
-  <div class="container">
-
-    <h1>Table Timeline</h1>
-
-    <p>Table Timeline is a javascript module and associated css file which converts HTML event tables to graphical
-      timeline charts. The following example html files demonstrate how this library works.</p>
-    <ul>
-      <li><a href="uk-prime-ministers.html">uk-prime-ministers</a></li>
-      <li><a href="geologic-timescale.html">geologic-timescale.html</a></li>
-      <li><a href="generations.html">generations.html</a></li>
-      <li><a href="test.html">test.html</a></li>
-    </ul>
-
-    <script src="table-timeline.js"></script>
-
-  </div>
-
-</body>
-
-</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Timeline - Home Page</title>
+</head>
+<body>
+<h1>Timeline - Home Page</h1>
+<ol>
+<li><a href='/history-of-the-universe.html'>History of the universe</a></li><li><a href='/human-evolution.html'>Human evolution</a></li><li><a href='/geologic-timescale.html'>Geologic Timescale</a></li><li><a href='/uk-prime-ministers.html'>UK Prime Ministers</a></li>
+</ol>
+</body>
+</html>
