Formatting improvements and fixed a bug in generation options

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Timeline - Home Page</title>
+<link rel="stylesheet" href="/test.css">
 </head>
-<body>
+<body class="home">
 <h1>Timeline - Home Page</h1>
 <ol>
 <li><a href='/history-of-the-universe.html'>History of the universe</a></li><li><a href='/human-evolution.html'>Human evolution</a></li><li><a href='/geologic-timescale.html'>Geologic Timescale</a></li><li><a href='/uk-prime-ministers.html'>UK Prime Ministers</a></li>
