--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="home">
 <h1>Timeline - Home Page</h1>
 <ol>
-<li><a href='/history-of-the-universe.html'>History of the universe</a></li><li><a href='/human-evolution.html'>Human evolution</a></li><li><a href='/geologic-timescale.html'>Geologic Timescale</a></li><li><a href='/uk-prime-ministers.html'>UK Prime Ministers</a></li>
+<li><a href='/uk-prime-ministers.html'>UK Prime Ministers</a></li><li><a href='/history-of-the-universe.html'>History of the universe</a></li><li><a href='/human-evolution.html'>Human evolution</a></li><li><a href='/geologic-timescale.html'>Geologic Timescale</a></li>
 </ol>
 </body>
 </html>
